#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(include/yardsale.h)
AM_INIT_AUTOMAKE(yardsale, 0.1)

# Checks for programs.
AC_PROG_CC
AC_PROG_GCC_TRADITIONAL
AC_LANG([C++])
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_INSTALL


AM_OPTIONS_WXCONFIG
AM_PATH_WXCONFIG(2.3.2, wxWin=1)
        if test "$wxWin" != 1; then
        AC_MSG_ERROR([
                wxWindows must be installed on your system.

                Please check that wx-config is in path, the directory
                where wxWindows libraries are installed (returned by
                'wx-config --libs' or 'wx-config --static --libs' command)
                is in LD_LIBRARY_PATH or equivalent variable and
                wxWindows version is 2.3.2 or above.
                ])
        else
               dnl Quick hack until wx-config does it
               ac_save_LIBS=$LIBS
               ac_save_CXXFLAGS=$CXXFLAGS
               LIBS=$WX_LIBS
               CXXFLAGS=$WX_CXXFLAGS
               AC_LANG_SAVE
               AC_LANG_CPLUSPLUS
               AC_TRY_LINK([#include <wx/wx.h>],
               [wxString test=""],
               ,[WX_LIBS=$WX_LIBS_STATIC])
               AC_LANG_RESTORE
               LIBS=$ac_save_LIBS
               CXXFLAGS=$ac_save_CXXFLAGS
        fi
        
dnl AM_GNU_GETTEXT

AC_CONFIG_FILES([Makefile
                 include/Makefile
                 src/Makefile])
AC_OUTPUT
