# pak chooie!

yardsale_includedir = $(pkgincludedir)

yardsale_include_DATA = \
	yardsale.h\
	yardsale_wdr.h\
	ys_splash.h\
	ys_main.h\
	ys_inventory.h\
	ys_login.h\
	ys_sale.h\
	ys_calc.h\
	ys_keybrd.h\
	ys_employee.h\
	ys_log.h\
	ys_inv_type.h\
	ys_dbtype.h\
	ys_database.h\
	ys_exception.h\
	ys_bitmaps.h\
	ys_debug.h\
	ys_config.h\
	ys_footer.h\
	ys_calc_dlg.h\
	ys_keybrd_dlg.h\
	ys_util.h\
	ys_employee_type.h

EXTRA_DIST = $(yardsale_include_DATA)
