# pak chooie!

yardsale_includedir = $(pkgincludedir)

yardsale_include_DATA = \
	yardsale.h\
	ys_splash.h\
	ys_main.h\
	ys_inventory.h\
	ys_login.h\
	ys_sale.h\
	ys_calc.h\
	ys_keybrd.h\
	ys_employee.h\
	ys_log.h\
	ys_inv_type.h\
	ys_dbtype.h\
	ys_database.h\
	ys_exception.h\
	ys_debug.h\
	ys_config.h\
	ys_footer.h\
	ys_calc_dlg.h\
	ys_keybrd_dlg.h\
	ys_util.h\
	ys_employee_type.h\
	ys_cust_type.h\
	ys_trans_type.h\
	ys_tax_type.h\
	ys_group.h\
	ys_build.h\
	ys_vend_type.h\
	ys_carrier_type.h\
	ys_package_type.h\
	ys_shipping_type.h\
	ys_date.h\
	xmlnode.h\
	xml.h\
	wrapexpat.h

EXTRA_DIST = $(yardsale_include_DATA)
